--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,6 @@
   "dependencyDashboard": true,
   "timezone": "Asia/Tokyo",
   "schedule": [
-    "after 00:20am on saturday"
+    "after 09:30pm on friday"
   ]
 }
