--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
   "dependencyDashboard": true,
   "timezone": "Asia/Tokyo",
   "schedule": [
-    "after 12:15pm on saturday"
+    "after 1:10am on sunday"
   ],
   "enabledManagers": [
     "gomod"
